# ScopeGuard

./: .gitignore  CMakeLists.txt  README
include/: SimpleGuard.hpp
test/: DummyResource.hpp  ScopeGuard.hpp
